<resources>
    <string name="app_name">Arch</string>

    <!-- SoC screen -->
    <string name="soc_title">CPU</string>
    <string name="soc_screen_vendor_image">Vendor Image</string>
    <string name="soc_screen_vendor">Vendor</string>
    <string name="soc_screen_abi">ABI</string>
    <string name="soc_screen_model">Model</string>
    <string name="soc_screen_details">Details</string>
    <string name="soc_gpu_details">Graphics</string>
    <string name="soc_screen_cores">Cores</string>
    <string name="soc_screen_clocks">Clocks</string>
    <string name="soc_screen_max_clock">Max</string>
    <string name="soc_screen_min_clock">Min</string>
    <string name="soc_screen_core_n">Core %d</string>
    <string name="soc_screen_value_mhz">%d MHz</string>
    <string name="soc_screen_inactive_core">Inactive</string>
    <string name="soc_screen_instructions">Instructions</string>
    <string name="soc_screen_revision">Revision</string>
    <string name="soc_screen_device">Device</string>
    <string name="soc_screen_governor">Governor</string>
    <string name="soc_screen_serial">Serial</string>
    <string name="soc_gpu_vendor">Vendor</string>
    <string name="soc_gpu_renderer">Renderer</string>
    <string name="soc_gpu_version">Version</string>
    <string name="unknown">Unknown</string>

    <!-- System screen -->
    <string name="sys_title">System</string>
    <string name="sys_screen_android_name">Android</string>
    <string name="sys_screen_android_api">API</string>
    <string name="sys_screen_model">Model</string>
    <string name="sys_screen_product">Product</string>
    <string name="sys_screen_device_name">Device</string>
    <string name="sys_screen_bootloader">Bootloader</string>
    <string name="sys_screen_board_name">Board</string>
    <string name="sys_screen_brand">Brand</string>
    <string name="sys_screen_manufacturer">Manufacturer</string>
    <string name="sys_version_base">Base</string>
    <string name="sys_version_codename">Codename</string>
    <string name="sys_version_release">Release</string>
    <string name="sys_version_security_path">Security Patch</string>
    <string name="sys_screen_version">Version</string>

    <!-- Device screen -->
    <string name="dev_title">Device</string>
    <string name="dev_screen_display">Display</string>
    <string name="dev_screen_width">Width</string>
    <string name="dev_screen_height">Height</string>
    <string name="dev_screen_density">Density</string>
    <string name="dev_screen_dpi">DPI</string>

    <!-- Sensors screen -->
    <string name="sen_title">Sensors</string>

    <!-- About screen -->
    <string name="abt_title">About</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
