<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/navigation_cpu"
          android:icon="@drawable/ic_cpu_icon"
          android:title="@string/soc_title"/>

    <item android:id="@+id/navigation_system"
          android:icon="@drawable/ic_android"
          android:title="@string/sys_title"/>

    <item android:id="@+id/navigation_device"
          android:icon="@drawable/ic_device"
          android:title="@string/dev_title"/>

    <item android:id="@+id/navigation_sensors"
          android:icon="@drawable/ic_sensors"
          android:title="@string/dev_title"/>

    <item android:id="@+id/navigation_about"
          android:icon="@drawable/ic_about"
          android:title="@string/abt_title"/>
</menu>
