<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/cpu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/soc_screen_vendor_image"
                android:importantForAccessibility="no"
                app:srcCompat="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/main_cpu_info"
                app:layout_constraintBottom_toBottomOf="@id/main_cpu_info"
                android:visibility="gone"/>

        <LinearLayout
                android:id="@+id/main_cpu_info"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/details_title"
                app:layout_constraintStart_toEndOf="@+id/cpu_icon">

            <TextView
                    android:id="@+id/vendor_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soc_screen_vendor"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/vendor_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    tools:text="Vendor Name"/>

            <TextView
                    android:id="@+id/vendor_model_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soc_screen_model"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/model_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryTextColor"
                    tools:text="Model Name"/>
        </LinearLayout>

        <TextView
                android:id="@+id/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soc_screen_details"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/main_cpu_info"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/details_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/details_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_height="100dp"/>

        <TextView
                android:id="@+id/gpu_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soc_gpu_details"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/details_list"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gpu_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/gpu_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_height="100dp"/>

        <TextView
                android:id="@+id/clock_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soc_screen_clocks"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/gpu_list"
                app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clock_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toBottomOf="@+id/clock_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_height="100dp"/>

        <TextView
                android:id="@+id/flags_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soc_screen_instructions"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/clock_list"
                app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/flags_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:showDivider="middle"
                app:dividerDrawableHorizontal="@drawable/divider_tag_horizontal"
                app:dividerDrawableVertical="@drawable/divider_tag_vertical"
                app:flexWrap="wrap"
                app:alignItems="stretch"
                app:alignContent="stretch"
                app:layout_constraintTop_toBottomOf="@+id/flags_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_height="200dp"/>

        <android.opengl.GLSurfaceView
                android:id="@+id/gl_surface"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:alpha="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flags_list"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
